--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,900;1,300;1,400;1,700&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,300;1,400&display=swap');
-@import 'react-toastify/dist/ReactToastify.css';
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,900;1,300;1,400;1,700&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,300;1,400&display=swap");
+@import "react-toastify/dist/ReactToastify.css";
+@import "swiper/css";
+@import "swiper/css/navigation";
 
 @tailwind base;
 @tailwind components;
@@ -7,65 +9,65 @@
 
 html,
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 /* Scrollbar CSS */
 html *::-webkit-scrollbar {
-    border-radius: 0;
-    width: 8px;
+  border-radius: 0;
+  width: 8px;
 }
 
 html *::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.15);
 }
 
 html *::-webkit-scrollbar-track {
-    border-radius: 0;
-    background-color: rgba(0, 0, 0, 0);
+  border-radius: 0;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 button,
 input,
 [tabindex] {
-    outline: none;
-    border: none;
+  outline: none;
+  border: none;
 }
 
 a {
-    color: currentColor;
-    text-decoration: none;
+  color: currentColor;
+  text-decoration: none;
 }
 
 p {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 a:hover {
-    color: white;
+  color: white;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 /* Firefox */
-input[type='number'] {
-    -moz-appearance: textfield;
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 /* React-Quill */
 .ql-toolbar.ql-snow.active {
-    background-color: #ffffff;
+  background-color: #ffffff;
 }
 
 .ql-editor {
-    font-size: 16px; /* Set your desired default font size here */
-    height: 150px !important;
+  font-size: 16px; /* Set your desired default font size here */
+  height: 150px !important;
 }
