--- a/src/index.css
+++ b/src/index.css
@@ -7,67 +7,68 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Variables */
+:root {
+    --main-w: 1200px;
+    --main-margin-top: 16px;
+}
+
 html,
 body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
 }
 
 /* Scrollbar CSS */
 html *::-webkit-scrollbar {
-  border-radius: 0;
-  width: 8px;
+    border-radius: 0;
+    width: 8px;
 }
 
 html *::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background-color: rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.15);
 }
 
 html *::-webkit-scrollbar-track {
-  border-radius: 0;
-  background-color: rgba(0, 0, 0, 0);
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 button,
 input,
 [tabindex] {
-  outline: none;
-  border: none;
+    outline: none;
+    border: none;
 }
 
 a {
-  color: currentColor;
-  text-decoration: none;
+    color: currentColor;
+    text-decoration: none;
 }
 
 p {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 a:hover {
-  color: white;
+    color: white;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 /* Firefox */
 input[type="number"] {
-  -moz-appearance: textfield;
+    -moz-appearance: textfield;
 }
 
-/* React-Quill */
-.ql-toolbar.ql-snow.active {
-  background-color: #ffffff;
-}
-
-.ql-editor {
-  font-size: 16px; /* Set your desired default font size here */
-  height: 150px !important;
+/* Common */
+.main-w {
+    width: var(--main-w);
 }
